{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 12,
  "lineage": "359518f4-439e-ead6-905b-839f405f47ea",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "tdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:748442896741:vpc/vpc-076ab812151c38f5b",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0947e24aaa4db0b2f",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0564e0497ddf37195",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-076ab812151c38f5b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01c53c784638fdf68",
            "owner_id": "748442896741",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "tdp-database-vpc",
              "applicationId": "tdp-database",
              "owner": "David Liu",
              "projectId": "tdp-database"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.lambda_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:748442896741:security-group/sg-02324b02b4a49dd0a",
            "description": "Security group for Lambda function xero-item-sync-handler",
            "egress": [],
            "id": "sg-02324b02b4a49dd0a",
            "ingress": [],
            "name": "xero-item-sync-handler-sg",
            "name_prefix": "",
            "owner_id": "748442896741",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "xero-item-sync-handler-sg",
              "applicationId": "xero-item-sync",
              "owner": "David Liu",
              "projectId": "xero-item-sync"
            },
            "tags_all": {
              "Name": "xero-item-sync-handler-sg",
              "applicationId": "xero-item-sync",
              "owner": "David Liu",
              "projectId": "xero-item-sync"
            },
            "timeouts": null,
            "vpc_id": "vpc-076ab812151c38f5b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748442896741",
            "id": "sg-02324b02b4a49dd0a",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "data.aws_vpc.tdp"
          ]
        }
      ]
    },
    {
      "module": "module.lambda_security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:748442896741:security-group-rule/sgr-042dae9d1e2e375d8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-042dae9d1e2e375d8",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-southeast-2",
            "security_group_id": "sg-02324b02b4a49dd0a",
            "security_group_rule_id": "sgr-042dae9d1e2e375d8",
            "tags": {
              "applicationId": "xero-item-sync",
              "owner": "David Liu",
              "projectId": "xero-item-sync"
            },
            "tags_all": {
              "applicationId": "xero-item-sync",
              "owner": "David Liu",
              "projectId": "xero-item-sync"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748442896741",
            "id": "sgr-042dae9d1e2e375d8",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "data.aws_vpc.tdp",
            "module.lambda_security_group.aws_security_group.lambda_sg"
          ]
        }
      ]
    }
  ]
}